--- a/style.css
+++ b/style.css
@@ -84,7 +84,15 @@
 /* #region PreOrder */
 
 #pre-order-section {
-      background: rgb(86, 86, 90);
+      background-image: linear-gradient(0deg,rgba(232, 231, 235, 0.315),rgba(27, 13, 5, 0.815)), url(img/PricingBackground.jpg);
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+
+}
+
+#pre-order-section::before  {
+      background: l;
 }
 
 #pre-order-section h1 {
@@ -121,10 +129,16 @@
       opacity: 0.7;
 }
 
-.pricing .btn {
+.pricing .card-body .btn {
       letter-spacing: .1rem;
       font-weight: bold;
       padding: 1rem;
+      color: rgb(247, 241, 241);
+      box-shadow: 0 5px 18px 0 rgba(0,0,0,.1)
+}
+
+.pricing .card-body .btn:hover {
+      color: rgb(255, 255, 255);
 }
 
 
