--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
       background-attachment: fixed;
       background-position: center;
       background-repeat: no-repeat;
+      background-size: cover;
 }
 
 #pre-order-section::before  {
