--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .page-header {
       /* Use of image permitted by CC0 Creative Commons : https://wallpapersfit.com/gym-wallpaper.html/gym-wallpaper-hdq-cover-1wc2003812?lang=nl */
-      background-image: linear-gradient(0deg,rgba(232, 231, 235, 0.315),rgba(134, 50, 2, 0.815)), url(/img/LandingBackground.jpg);
+      background-image: linear-gradient(0deg,rgba(232, 231, 235, 0.315),rgba(134, 50, 2, 0.815)), url(img/LandingBackground.jpg);
       background-attachment: fixed;
       background-position: center;
       background-repeat: no-repeat;
