--- a/style.css
+++ b/style.css
@@ -45,6 +45,14 @@
 
 /* #region Footer */
 
+.footer {
+      background-color: rgb(34, 34, 34);
+}
+
+.footer-heading, .footer-list li, .copyright {
+      color: #E0E1E2;
+}
+
 .footer-subjects {
       position: relative;
       margin: 0 auto;
@@ -158,7 +166,6 @@
 
 /* #endregion PreOrder */
 
-
 /* #region MailChimp */
 
 #mailchimp-section {
@@ -182,6 +189,8 @@
 }
 
 /* #endregion MailChimp */
+
+/* #region MediaQueries */
 
 /* xl-breakpoing */
 @media screen and (max-width: 1200px){
@@ -217,7 +226,7 @@
       }
 }
 
-/* m-breakpoint */
+/* md-breakpoint */
 @media screen and (max-width: 768px){
       .social-media-bar .copyright {
             margin-top: 15px;
@@ -253,8 +262,23 @@
       }
 }
 
+/* sm-breakpoint */
+@media screen and (max-width: 576px){
+      #mailchimp-section h1 {
+            font-size: 24px;
+            color: rgb(236, 238, 240);
+      }
+      #mailchimp-section  p {
+            font-size: 14px;
+            color: rgb(236, 238, 240);
+      }
+}
+
+/* xs-breakpoint */
 @media screen and (max-width: 385px){
       .footer-divider {
             margin-top: 55px;
       }
 }
+
+/* #endregion MediaQueries */
