--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
       max-width: 300px !important;
 }
 
+
+
 .page-header {
       /* Use of image permitted by CC0 Creative Commons : https://wallpapersfit.com/gym-wallpaper.html/gym-wallpaper-hdq-cover-1wc2003812?lang=nl */
-      background-image: linear-gradient(0deg,rgba(232, 231, 235, 0.315),rgba(134, 50, 2, 0.815)), url(img/LandingBackground.jpg);
-      background-attachment: fixed;
+      background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.981),rgba(48, 48, 47, 0.815)), url(img/LandingBackground.jpg);
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -33,8 +34,39 @@
       transform: translate3d(-150px,0,0);
 }
 
+#app-section {
+      background: url(https://i.pinimg.com/736x/c1/14/f6/c114f61045ce6e054dedb4b9f1855dfc--grey-colors-phone-backgrounds.jpg);     
+      color: #fff;
+}
+
+#app-section .carousel-inner {
+      box-shadow: none;
+}
+
+#app-section h1 {
+      margin-top: 100px;
+      font-size: 48px;
+}
+
+#app-section p {
+      font-size: 16px;
+}
+
+#app-section hr {
+      border-top: 2px solid rgba(255, 255, 255, 0.315); 
+      margin: 0px; 
+      margin-top: -15px; 
+      max-width: 400px; 
+      margin-bottom: 25px;
+}
+
+#app-section ul li {
+      color: rgba(255, 255, 255, 0.712);
+      margin-top: 5px;
+}
+
 #product-preview-section {
-      background: radial-gradient(ellipse at top left, #20333A 0%,#356277 57%); 
+      background: rgb(44, 29, 29);
       color: white;
 }
 
@@ -53,9 +85,28 @@
       font-weight: 400;
 }
 
+#review-section  {
+      background: linear-gradient(0deg,rgba(0, 0, 0, 0.981),rgba(48, 48, 47, 0.815)), url("https://images.pexels.com/photos/355747/pexels-photo-355747.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
+      background-repeat: no-repeat;
+      background-size: cover;
+}
+
+#review-section .carousel-inner{
+      background: rgba(250, 250, 250, 0.603);
+}
+
+
 .arrows-1_minimal-left, .arrows-1_minimal-right {
       color: black;
       font-size: 24px;
+}
+
+.carousel-control-prev:hover {
+      background: rgba(161, 157, 157, 0.030);
+}
+
+.carousel-control-next:hover {
+      background: rgba(161, 157, 157, 0.030);
 }
 
 .carousel-item {
@@ -70,8 +121,9 @@
 }
 
 #pre-order-section {
+      
       /* Use of image permitted by CC0 Creative Commons : https://free-images.com/display/training_barbell_muscles_hands.html --> */
-      background-image: linear-gradient(0deg,rgba(232, 231, 235, 0.315),rgba(27, 13, 5, 0.815)), url(img/PricingBackground.jpg);
+      background-image: linear-gradient(0deg,rgba(48, 48, 47, 0.815),rgba(0, 0, 0, 0.981)), url(img/PricingBackground.jpg);
       background-attachment: fixed;
       background-position: center;
       background-repeat: no-repeat;
@@ -85,7 +137,7 @@
 #pre-order-section .card {
       border-radius: 0.2rem;
       transition: all 0.2s;
-      box-shadow: 0 5px 25px 0 rgba(0,0,0,.4)
+      box-shadow: 0 5px 25px 0 rgba(0,0,0,.4);
 }
 
 #pre-order-section .card:hover {
@@ -116,7 +168,9 @@
 }
 
 #mailchimp-section {
-      background: radial-gradient(ellipse at top left, #20333A 0%,#356277 57%); 
+      background: url(/img/Subscribe.png);
+      background-repeat: no-repeat;
+      background-size: cover;
 }
 
 #mailchimp-section input {
@@ -192,6 +246,15 @@
 }
 
 @media screen and (max-width: 992px){
+      #app-section img {
+            max-height: 500px;
+      }
+
+      #app-section h1 {
+            margin-top: 20px;
+      }
+
+
       .social-media-bar {
             text-align: center !important;
       }
@@ -227,6 +290,29 @@
 }
 
 @media screen and (max-width: 768px){
+
+      #app-section img {
+            display: block;
+            margin: auto;
+      }
+
+      #app-section h1, #app-section p{
+            text-align: center;
+      }
+
+      #app-section hr {
+            border-top: 1px solid rgba(255, 255, 255, 0.315); 
+            margin: auto; 
+            margin-top: -15px; 
+            margin-bottom: 25px;
+      }
+
+      #app-section ul {
+            text-align: left;
+            margin-left: 25%;
+      }
+
+
       .carousel-item {
             min-width: 540px;
             min-height: 620px;
@@ -267,6 +353,36 @@
 }
 
 @media screen and (max-width: 576px){
+
+      #app-section .container{
+            margin: 0 auto;
+      }
+
+      #app-section .carousel-item{
+            height: auto;
+            min-width: 100%;
+      }
+
+      #app-section h1, #app-section p{
+            text-align: center;
+      }
+
+      #app-section hr {
+            border-top: 1px solid rgba(255, 255, 255, 0.315); 
+            margin: auto; 
+            margin-top: -15px; 
+            margin-bottom: 25px;
+      }
+
+      #app-section ul {
+            text-align: left;
+            margin-left: 15%;
+      }
+
+      #app-section .carousel-inner{
+            padding-bottom: 400px;
+      }
+
       #mailchimp-section h1 {
             font-size: 24px;
             color: rgb(236, 238, 240);
