--- a/style.css
+++ b/style.css
@@ -86,13 +86,20 @@
 }
 
 #review-section  {
-      background: linear-gradient(0deg,rgba(0, 0, 0, 0.981),rgba(48, 48, 47, 0.815)), url("https://images.pexels.com/photos/355747/pexels-photo-355747.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
+      background: linear-gradient(0deg,rgba(0, 0, 0, 0.781),rgba(48, 48, 47, 0.715)), url("https://images.pexels.com/photos/358528/pexels-photo-358528.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
       background-repeat: no-repeat;
       background-size: cover;
+      color: rgba(255, 255, 255, 0.850);
 }
 
 #review-section .carousel-inner{
-      background: rgba(250, 250, 250, 0.603);
+      background: rgba(223, 223, 223, 0.700);
+      color: rgb(0, 0, 0);
+}
+
+#review-section .review-text{
+      font-weight: 300;
+      font-size: 1.4em;
 }
 
 
@@ -115,6 +122,7 @@
 }
 
 .review-image {
+      margin-top: 65px !important;
       object-fit: contain;
       width: 150px;
       height: 150px;
@@ -384,7 +392,7 @@
       }
 
       #app-section .carousel-inner{
-            padding-bottom: 250px;
+            padding-bottom: 180px;
       }
 
       #mailchimp-section h1 {
