--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,9 +75,16 @@
 
 #product-preview-section button {
       margin-top: 35px;
-      color: #ffffff; 
+      color: #ffffffd7; 
       background-color: #38171F; 
       border-color: #DDDCE3; 
+      box-shadow: 0px 0px 22px 1px rgba(90, 48, 32, 0.564);
+      transition: 0.3s;
+}
+
+#product-preview-section button:hover {
+      color:#fff;
+      transform: scale(1.03);
 }
 
 #product-preview-section .partial-text {
