--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,10 @@ body {
         max-width: 300px !important;
     }
 
+    a:hover{
+        cursor: pointer;
+    }
+
     .page-header {
         background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.981),rgba(48, 48, 47, 0.815)), url(../../src/img/LandingBackground.jpg);
         background-position: center;
