--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -111,7 +111,23 @@ body {
         margin-top: 50px;
         background: none;
         box-shadow: none;
+        box-shadow: 0 6px 35px 0 rgba(0,0,0,0.4);
+        transition: 0.5s;
+        height: 250px;
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.1);
+        }
     }
+
+    .card-title {
+        transition: 1.3s;
+
+        &:hover {
+            transform: rotate(720deg);
+        }
+    }
+    
 
     .card-price {
         font-size: 24px;
